WOLO-280 reports edit + publish/unpublish
