# src/main/java/pl/pjwstk/woloappapi/controller/OrganisationController.java
@@ -6,15 +6,20 @@ import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.client.WebClient;
-import pl.pjwstk.woloappapi.model.*;
+import pl.pjwstk.woloappapi.model.EventResponseDto;
+import pl.pjwstk.woloappapi.model.OrganisationEditRequestDto;
+import pl.pjwstk.woloappapi.model.OrganisationRequestDto;
+import pl.pjwstk.woloappapi.model.OrganisationResponseDto;
 import pl.pjwstk.woloappapi.model.admin.OrganisationResponseAdminDto;
 import pl.pjwstk.woloappapi.model.entities.Event;
 import pl.pjwstk.woloappapi.model.entities.Organisation;
 import pl.pjwstk.woloappapi.model.translation.OrganisationTranslationRequest;
 import pl.pjwstk.woloappapi.model.translation.OrganisationTranslationResponce;
 import pl.pjwstk.woloappapi.service.OrganisationService;
+import pl.pjwstk.woloappapi.service.UserService;
 import pl.pjwstk.woloappapi.utils.EventMapper;
 import pl.pjwstk.woloappapi.utils.OrganisationMapper;
 
@@ -29,6 +34,8 @@ public class OrganisationController {
     private final OrganisationService organisationService;
     private final OrganisationMapper organisationMapper;
     private final EventMapper eventMapper;
+
+    private final UserService userService;
 
     @GetMapping()
     public ResponseEntity<List<OrganisationResponseDto>> getOrganisations() {
@@ -102,20 +109,21 @@ public class OrganisationController {
         return new ResponseEntity<>(eventDtos, HttpStatus.OK);
     }
 
-    @PutMapping("/{id}/edit")
+    @PutMapping("/edit")
     public ResponseEntity<HttpStatus> editOrganisation(
-            @Valid @RequestBody OrganisationRequestDto organisation,
-            @PathVariable Long id,
-            @RequestParam String language) {
-        var translate = createTranslationDto(organisation, language);
-        var localClient = WebClient.create("http://host.docker.internal:5000/");
-        localClient.post()
-                .uri("/organisation/translate")
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(translate)
-                .retrieve()
-                .bodyToMono(OrganisationTranslationResponce.class)
-                .subscribe(translated -> organisationService.updateOrganisation(organisation, id, translated));
+            @Valid @RequestBody OrganisationEditRequestDto organisation) {
+        var authentication = SecurityContextHolder.getContext().getAuthentication();
+        var organisationId = userService.getCurrentUser(authentication).getOrganisation().getId();
+        organisationService.updateOrganisation(organisation, organisationId);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+
+    }
+
+    @PutMapping("/admin/{id}/edit")
+    public ResponseEntity<HttpStatus> editOrganisationByAdmin(
+            @Valid @RequestBody OrganisationEditRequestDto organisation,
+            @PathVariable Long id) {
+        organisationService.updateOrganisation(organisation, id);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
