# src/main/resources/static/openapi.yaml
@@ -1155,7 +1155,7 @@ paths:
           $ref: '#/components/responses/OK'
         '404':
           $ref: '#/components/responses/NotFoundResponse'
-  /organisations/{id}/edit:
+  /organisations/edit:
     put:
       tags:
         - Organisations
@@ -1167,24 +1167,44 @@ paths:
           in: query
           description: Organisation object with changes
           schema:
-            $ref: '#/components/schemas/OrganisationRequestDto'
+            $ref: '#/components/schemas/OrganisationEditRequestDto'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrganisationEditRequestDto'
+        required: true
+      responses:
+        '204':
+          $ref: '#/components/responses/NoContentResponse'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /organisations/admin/{id}/edit:
+    put:
+      tags:
+        - Organisations
+      summary: Edit organisation
+      description: Organisation must exist
+      operationId: editOrganisation
+      parameters:
+        - name: organisation
+          in: query
+          description: Organisation object with changes
+          schema:
+            $ref: '#/components/schemas/OrganisationEditRequestDto'
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
-        - name: language
-          in: query
-          required: true
-          schema:
-            type: integer
-          example: "PL"
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/OrganisationRequestDto'
+              $ref: '#/components/schemas/OrganisationEditRequestDto'
         required: true
       responses:
         '204':
@@ -1392,23 +1412,42 @@ paths:
       description: Report must exist
       operationId: editReport
       parameters:
-        - name: language
-          in: query
-          description: Language of ReportDto object
-          required: true
-          schema:
-            type: string
-          example: "PL"
         - name: report
           in: query
           description: Report object with changes
           schema:
-            $ref: '#/components/schemas/ReportRequestDto'
+            $ref: '#/components/schemas/ReportEditRequestDto'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ReportRequestDto'
+              $ref: '#/components/schemas/ReportEditRequestDto'
+        required: true
+      responses:
+        '204':
+          $ref: '#/components/responses/NoContentResponse'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /reports/admin/edit:
+    put:
+      tags:
+        - Reports
+      summary: Edit report
+      description: Report must exist
+      operationId: editReportByAdmin
+      parameters:
+        - name: report
+          in: query
+          description: Report object with changes
+          schema:
+            $ref: '#/components/schemas/ReportEditRequestDto'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReportEditRequestDto'
         required: true
       responses:
         '204':
@@ -1435,6 +1474,94 @@ paths:
       responses:
         '204':
           $ref: '#/components/responses/NoContentResponse'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /reports/publish/{id}:
+    post:
+      tags:
+        - Reports
+      summary: Publish report
+      operationId: publishReport
+      parameters:
+        - name: id
+          in: path
+          description: Report id
+          required: true
+          schema:
+            type: integer
+            format: int64
+          example: 1
+      responses:
+        '200':
+          $ref: '#/components/responses/OK'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /reports/admin/publish/{id}:
+    post:
+      tags:
+        - Reports
+      summary: Publish report for admin
+      operationId: publishReportByAdmin
+      parameters:
+        - name: id
+          in: path
+          description: Report id
+          required: true
+          schema:
+            type: integer
+            format: int64
+          example: 1
+      responses:
+        '200':
+          $ref: '#/components/responses/OK'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /reports/unpublish/{id}:
+    post:
+      tags:
+        - Reports
+      summary: Unpublish report
+      operationId: unpublishReport
+      parameters:
+        - name: id
+          in: path
+          description: Report id
+          required: true
+          schema:
+            type: integer
+            format: int64
+          example: 1
+      responses:
+        '200':
+          $ref: '#/components/responses/OK'
+        '400':
+          $ref: '#/components/responses/BadRequestResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+  /reports/admin/unpublish/{id}:
+    post:
+      tags:
+        - Reports
+      summary: Unpublish report for admin
+      operationId: unpublishReportByAdmin
+      parameters:
+        - name: id
+          in: path
+          description: Report id
+          required: true
+          schema:
+            type: integer
+            format: int64
+          example: 1
+      responses:
+        '200':
+          $ref: '#/components/responses/OK'
         '400':
           $ref: '#/components/responses/BadRequestResponse'
         '404':
@@ -2288,6 +2415,69 @@ components:
                 - Community Outreach: Participate in events and educational programs to promote animal welfare.
 
             Join us today and make a difference in the lives of animals in need!
+        email:
+          maxLength: 50
+          minLength: 0
+          type: string
+        phoneNumber:
+          maxLength: 9
+          minLength: 9
+          pattern: '[0-9]{9}'
+          type: string
+        street:
+          maxLength: 50
+          minLength: 0
+          type: string
+        homeNum:
+          maxLength: 10
+          minLength: 0
+          type: string
+        districtId:
+          type: integer
+          format: int64
+          example: 1
+        cityId:
+          type: integer
+          format: int64
+          example: 1
+        moderatorId:
+          type: integer
+          format: int64
+          example: 1
+        logoUrl:
+          maxLength: 255
+          minLength: 0
+          type: string
+          example: https://example.com/image.jpg
+    OrganisationEditRequestDto:
+      required:
+        - name
+        - descriptionPL
+        - descriptionEN
+        - descriptionUA
+        - descriptionRU
+        - email
+        - phoneNumber
+        - street
+        - homeNum
+        - districtId
+        - cityId
+        - moderatorId
+      type: object
+      properties:
+        name:
+          maxLength: 250
+          minLength: 0
+          type: string
+          example: Animal Helpers
+        descriptionPL:
+          type: string
+        descriptionEN:
+          type: string
+        descriptionUA:
+          type: string
+        descriptionRU:
+          type: string
         email:
           maxLength: 50
           minLength: 0
